fixed index to work on local

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 .swipeArea {
     position:absolute;
     z-index:30;
-    background-image:url('https://raw.github.com/pfortes/swipeThis/master/img/trans.png');
+    background-image:url('img/trans.png');
     cursor:move;
 }
   </style>
   
-    <script type="text/javascript" src="https://raw.github.com/pfortes/swipeThis/master/js/jquery.1.6.1.min.js"></script> 
-    <script type="text/javascript" src="https://raw.github.com/pfortes/swipeThis/master/js/jquery.swipeThis.0.7.3.min.js"></script>
+    <script type="text/javascript" src="js/jquery.1.6.1.min.js"></script> 
+    <script type="text/javascript" src="js/jquery.swipeThis.0.7.3.min.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {
       $('#demo').swipeThis();
@@ -62,7 +62,7 @@
       $('#demo2').swipeThis({
         multiple:true,
         marginRight:15,
-        indicator:'https://raw.github.com/pfortes/swipeThis/master/img/flecha48x48.png'});
+        indicator:'img/flecha48x48.png'});
     });
 
     
