Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -57,23 +57,21 @@
 
 
 <h3> Import the scripts</h3>
-<code>
-    <script type="text/javascript" src="/js/jquery.js"></script> 
-    <script type="text/javascript" src="/js/swipeThis.min.js"></script>
-</code><br/>
+    &lt;script type="text/javascript" src="/js/jquery.js">&lt;/script> 
+    &lt;script type="text/javascript" src="/js/swipeThis.min.js">&lt;/script>
+<br/>
 
 <h3> The Markup</h3>
-<code>
-    <ul id="myGallery">
-        <li><img src='img/photo1.jpg'></li>
-        <li><img src='img/photo2.jpg'></li>
-        <li><img src='img/photo3.jpg'></li>
-    </ul>
-</code><br/>
+    &lt;ul id="myGallery"&gt;
+        &lt;li&gt;&lt;img src='img/photo1.jpg'>&lt;/li&gt;
+        &lt;li&gt;&lt;img src='img/photo2.jpg'>&lt;/li&gt;
+        &lt;li&gt;&lt;img src='img/photo3.jpg'>&lt;/li&gt;
+    &lt;/ul&gt;
+<br/>
 
-## The style
-<pre>
-    <style  type="text/css">
+<h4> The style</h4>
+
+&lt;style  type="text/css"&gt;
       .swipeThis {
         overflow:hidden;
       }
@@ -93,8 +91,8 @@
         background-image:url('/assets/img/trans.png');
 	cursor:move;
     }
-    </style>
-</pre>    
+&lt;/style&gt;
+    
 
 <h3>Swipe It!</h3>
 
