--- a/index.html
+++ b/index.html
@@ -57,16 +57,20 @@
 
 
 <h3> Import the scripts</h3>
-    &lt;script type="text/javascript" src="/js/jquery.js">&lt;/script> 
-    &lt;script type="text/javascript" src="/js/swipeThis.min.js">&lt;/script>
+	<pre><code>
+	    &lt;script type="text/javascript" src="/js/jquery.js">&lt;/script> 
+	    &lt;script type="text/javascript" src="/js/swipeThis.min.js">&lt;/script>
+	</code></pre>
 <br/>
 
 <h3> The Markup</h3>
+<pre><code>
     &lt;ul id="myGallery"&gt;
         &lt;li&gt;&lt;img src='img/photo1.jpg'>&lt;/li&gt;
         &lt;li&gt;&lt;img src='img/photo2.jpg'>&lt;/li&gt;
         &lt;li&gt;&lt;img src='img/photo3.jpg'>&lt;/li&gt;
     &lt;/ul&gt;
+    </code></pre>
 <br/>
 
 <h4> The style</h4>
