Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
 
 <h3> Import the scripts</h3>
-	<pre><code>
-	    &lt;script type="text/javascript" src="/js/jquery.js">&lt;/script> 
-	    &lt;script type="text/javascript" src="/js/swipeThis.min.js">&lt;/script>
-	</code></pre>
+	<pre>
+	    <script type="text/javascript" src="/js/jquery.js"></script> 
+	    <script type="text/javascript" src="/js/swipeThis.min.js"></script>
+	</pre>
 <br/>
 
 <h3> The Markup</h3>
