--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/pfortes/swipeThis">swipeThis</a>
-      <span class="small">by <a href="http://github.com/pfortes">pfortes</a></span></h1>
+    <h1><a href="http://github.com/pfortes/swipeThis">.swipeThis()</a></h1>
 
     <div class="description">
       swipeThis is a jQuery / jQuery mobile plugin for easily creating swipeable lists of items
@@ -58,8 +57,8 @@
 
 <h3> Import the scripts</h3>
 	<pre>
-	    <script type="text/javascript" src="/js/jquery.js"></script> 
-	    <script type="text/javascript" src="/js/swipeThis.min.js"></script>
+	    &lt;script type=&quot;text/javascript&quot; src=&quot;/js/jquery.js&quot;&gt;&lt;/script&gt; 
+	    &lt;script type=&quot;text/javascript&quot; src=&quot;/js/swipeThis.min.js&quot;&gt;&lt;/script&gt;
 	</pre>
 <br/>
 
@@ -74,8 +73,8 @@
 <br/>
 
 <h4> The style</h4>
-
-&lt;style  type="text/css"&gt;
+<pre>
+&amp;lt;style  type=&quot;text/css&quot;&amp;gt;
       .swipeThis {
         overflow:hidden;
       }
@@ -92,52 +91,47 @@
       .swipeArea {
         position:absolute;
         z-index:30;
-        background-image:url('/assets/img/trans.png');
+        background-image:url(&#39;/assets/img/trans.png&#39;);
 	cursor:move;
     }
-&lt;/style&gt;
-    
+&amp;lt;/style&amp;gt;
+</pre>    
 
 <h3>Swipe It!</h3>
-
+<pre>
     $('#MyGallery').swipeThis();
- 
- <br/>
+</pre>
+<br/>
 
 <h3> Customize it </h3>
-<code>
+<pre>
     $('#myGallery').swipeThis({
         multiple:true,
         marginRight:15,
         indicator:'/img/swipeIndicator.png'});
-   </code><br/> 
+</pre> 
 
 <br/>
 <h2> List of configuration Options:</h2>
 <ul>
-* Multiple (default: false)
-* fillContainer (default: true)
-* fullScreen (default: false)
-* itemWidth (default: 170)
-* itemHeight (default: 140)
-* indicator : Image url for the icon that tells users to swipe to see more content. (default: '')
-* marginRight: Margin applied to items in Multiple mode (default: 0)
-* speed: Transition speed (default: 100)
-* easein: jQuery easeIn function (default: '')
-* tolerance: (default: 0.5)
+  <li> Multiple (default: false)</li>
+  <li> fillContainer (default: true)</li>
+  <li> fullScreen (default: false)</li>
+  <li> itemWidth (default: 170)</li>
+  <li> itemHeight (default: 140)</li>
+  <li> indicator : Image url for the icon that tells users to swipe to see more content. (default: '')</li>
+  <li> marginRight: Margin applied to items in Multiple mode (default: 0)</li>
+  <li> speed: Transition speed (default: 100)</li>
+  <li> easein: jQuery easeIn function (default: '')</li>
+  <li> tolerance: (default: 0.5)</li>
 </ul>
 
 
 <h2>License</h2>
 <p>GNU</p>
 <h2>Authors</h2>
-<p>Pablo Fortes (fortes@noumeni.us)
-<br/>
-<br/>      </p>
-<h2>Contact</h2>
-<p>Fortes (fortes@noumeni.us)
-<br/>      </p>
-
+<p><a href='gplus.to/fortes' target='_blank'>Pablo Fortes</a>
+</p>
 
     <h2>Download</h2>
     <p>
