Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>pfortes/swipeThis @ GitHub</title>
+  <title>swipeThis() - jQuery Plugin that makes a list Swipeable!</title>
 
   <style type="text/css">
     body {
@@ -45,24 +45,28 @@
     <h1><a href="http://github.com/pfortes/swipeThis">.swipeThis()</a></h1>
 
     <div class="description">
-      swipeThis is a jQuery / jQuery mobile plugin for easily creating swipeable lists of items
+      swipeThis is a jQuery / jQuery mobile plugin for easily creating swipeable lists of items<br/>
+      
+      It is prepared to work on mobile devices and desktop browsers.<br/>
+      You can have one or multiple items visible.<br/>
+      Items can be clickable / tapable.<br/>
     </div>
 
-<h2>Dependencies</h2>
+<h4>Dependencies</h4>
 	<p>jQuery 1.5.x</p>
 
 
 <h2> Using swipeThis jQuery Plugin</h2>
 
 
-<h3> Import the scripts</h3>
+<h4> Import the scripts </h4>
 	<pre>
 	    &lt;script type=&quot;text/javascript&quot; src=&quot;/js/jquery.js&quot;&gt;&lt;/script&gt; 
 	    &lt;script type=&quot;text/javascript&quot; src=&quot;/js/swipeThis.min.js&quot;&gt;&lt;/script&gt;
 	</pre>
 <br/>
 
-<h3> The Markup</h3>
+<h4> The Markup </h4>
 <pre><code>
     &lt;ul id="myGallery"&gt;
         &lt;li&gt;&lt;img src='img/photo1.jpg'>&lt;/li&gt;
@@ -103,7 +107,7 @@
 </pre>
 <br/>
 
-<h3> Customize it </h3>
+<h4> Customize it! </h4>
 <pre>
     $('#myGallery').swipeThis({
         multiple:true,
@@ -129,11 +133,11 @@
 
 <h2>License</h2>
 <p>GNU</p>
-<h2>Authors</h2>
-<p><a href='gplus.to/fortes' target='_blank'>Pablo Fortes</a>
-</p>
 
-    <h2>Download</h2>
+<h2>Authors</h2>
+<p><a href='gplus.to/fortes' target='_blank'>Pablo Fortes</a></p>
+
+<h2>Download</h2>
     <p>
       You can download this project in either
       <a href="http://github.com/pfortes/swipeThis/zipball/master">zip</a> or
