Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #13a1b9;
+      background-color: #333;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #ffffff;
     }
     #container {
       margin: 0 auto;
-      width: 700px;
+      width: 900px;
     }
     h1 { font-size: 3.8em; color: #ec5e46; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
