--- a/index.html
+++ b/index.html
@@ -45,18 +45,17 @@
     <h1><a href="http://github.com/pfortes/swipeThis">.swipeThis()</a></h1>
 
     <div class="description">
-      swipeThis is a jQuery / jQuery mobile plugin for easily creating swipeable lists of items<br/>
+      swipeThis is a jQuery / jQuery mobile plugin for easily creating swipeable lists of items.<br/><br/>
       
-      It is prepared to work on mobile devices and desktop browsers.<br/>
-      You can have one or multiple items visible.<br/>
-      Items can be clickable / tapable.<br/>
+      It is prepared to work on mobile devices and desktop browsers, you can have one or multiple items visible, 
+      items can be clickable / tapable, and much more..<br/>
     </div>
 
 <h4>Dependencies</h4>
 	<p>jQuery 1.5.x</p>
 
 
-<h2> Using swipeThis jQuery Plugin</h2>
+<h2> Using swipeThis</h2>
 
 
 <h4> Import the scripts </h4>
@@ -131,11 +130,9 @@
 </ul>
 
 
-<h2>License</h2>
-<p>GNU</p>
 
-<h2>Authors</h2>
-<p><a href='gplus.to/fortes' target='_blank'>Pablo Fortes</a></p>
+<p>License: GNU</p><br/>
+<p>Author: <a href='gplus.to/fortes' target='_blank'>Pablo Fortes</a></p>
 
 <h2>Download</h2>
     <p>
