Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -128,12 +128,7 @@
   <li> easein: jQuery easeIn function (default: '')</li>
   <li> tolerance: (default: 0.5)</li>
 </ul>
-
-
-
-<p>License: GNU</p><br/>
-<p>Author: <a href='gplus.to/fortes' target='_blank'>Pablo Fortes</a></p>
-
+<br/>
 <h2>Download</h2>
     <p>
       You can download this project in either
@@ -146,7 +141,9 @@
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/pfortes/swipeThis">pfortes/swipeThis</a>
+<p>License: GNU</p>
+<p>Author: <a href='gplus.to/fortes' target='_blank'>Pablo Fortes</a></p>
+get the source code on GitHub : <a href="http://github.com/pfortes/swipeThis">pfortes/swipeThis</a>
     </div>
 
   </div>
