Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
+  
+    <script type="text/javascript" src="https://raw.github.com/pfortes/swipeThis/master/js/jquery.js"></script> 
+    <script type="text/javascript" src="https://raw.github.com/pfortes/swipeThis/master/js/jquery.swipethis.min.js"></script>
 </head>
 
 <body>
@@ -142,7 +145,7 @@
 
     <div class="footer">
 <p>License: GNU</p>
-<p>Author: <a href='gplus.to/fortes' target='_blank'>Pablo Fortes</a></p>
+<p>Author: <a href='http://gplus.to/fortes' target='_blank'>Pablo Fortes</a></p>
 get the source code on GitHub : <a href="http://github.com/pfortes/swipeThis">pfortes/swipeThis</a>
     </div>
 
