Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 }
   </style>
   
-    <script type="text/javascript" src="https://raw.github.com/pfortes/swipeThis/master/js/jquery.js"></script> 
-    <script type="text/javascript" src="https://raw.github.com/pfortes/swipeThis/master/js/jquery.swipethis.min.js"></script>
+    <script type="text/javascript" src="https://raw.github.com/pfortes/swipeThis/master/js/jquery.1.6.1.min.js"></script> 
+    <script type="text/javascript" src="https://raw.github.com/pfortes/swipeThis/master/js/jquery.swipeThis.0.7.3.min.js"></script>
 </head>
 
 <body>
@@ -105,8 +105,8 @@
 
 <h4> Import the scripts </h4>
 	<pre>
-	    &lt;script type=&quot;text/javascript&quot; src=&quot;/js/jquery.js&quot;&gt;&lt;/script&gt; 
-	    &lt;script type=&quot;text/javascript&quot; src=&quot;/js/swipeThis.min.js&quot;&gt;&lt;/script&gt;
+	    &lt;script type=&quot;text/javascript&quot; src=&quot;/js/jquery.1.6.1.min.js&quot;&gt;&lt;/script&gt; 
+	    &lt;script type=&quot;text/javascript&quot; src=&quot;/js/swipeThis.0.7.3.min.js&quot;&gt;&lt;/script&gt;
 	</pre>
 <br/>
 
