Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -81,21 +81,33 @@
 	<p>jQuery 1.5.x</p>
 
 
-<h2> Demo </h2>
+<h2> Simple Demo </h2>
 
  <ul id="demo">
-        <li><img src='img/photo1.jpg'></li>
-        <li><img src='img/photo2.jpg'></li>
-        <li><img src='img/photo3.jpg'></li>
+        <li><img src='http://el70.com/img/donGoio.jpg'></li>
+        <li><img src='http://el70.com/img/fortesMusica.png'></li>
+        <li><img src='http://el70.com/img/mejicanLost.png'></li>
     </ul>
 
-<h2> Demo 2 ( Multiple Items with links )</h2>
+<h2> Demo of Multiple Items with links </h2>
 
  <ul id="demo2">
-        <li><a href='http://noumeni.us' target='_blank'><img src='img/photo1.jpg'></a></li>
-        <li><a href='http://el70.com' target='_blank'><img src='img/photo2.jpg'></a></li>
-        <li><a href='http://soundcloud.com/fortes' target='_blank'><img src='img/photo3.jpg'></a></li>
-    </ul>
+  <li>
+    <a href='http://visualma.com' target='_blank'>
+      <img src='http://el70.com/img/visualma.png'>
+    </a>
+  </li>
+  <li>
+    <a href='http://el70.com' target='_blank'>
+      <img src='http://el70.com/img/uku.png'>
+    </a>
+  </li>
+  <li>
+    <a href='http://el70.com' target='_blank'>
+      <img src='http://el70.com/img/tiagosan.png'>
+    </a>
+  </li>
+</ul>
 
 
 <hr/>
