Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <h2> Simple Demo </h2>
 
- <ul id="demo">
+ <ul id="demo" style='height:200px;'>
         <li><img src='http://el70.com/img/donGoio.jpg'></li>
         <li><img src='http://el70.com/img/fortesMusica.png'></li>
         <li><img src='http://el70.com/img/mejicanLost.png'></li>
@@ -107,7 +107,7 @@
 
 <h2> Demo of Multiple Items with links </h2>
 
- <ul id="demo2">
+ <ul id="demo2" style='height:200px;'>
   <li>
     <a href='http://visualma.com' target='_blank'>
       <img src='http://el70.com/img/visualma.png'>
@@ -140,7 +140,7 @@
 
 <h4> The Markup </h4>
 <pre><code>
-    &lt;ul id="myGallery"&gt;
+    &lt;ul id="myGallery" &gt;
         &lt;li&gt;&lt;img src='img/photo1.jpg'>&lt;/li&gt;
         &lt;li&gt;&lt;img src='img/photo2.jpg'>&lt;/li&gt;
         &lt;li&gt;&lt;img src='img/photo3.jpg'>&lt;/li&gt;
