Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
     .demoContent {
      height:200px;
      width:400px;
+     margin-left:auto;
+     margin-right:auto;
+    }
+    
+     .demo2Content {
+     height:200px;
+     width:800px;
+     margin-left:auto;
+     margin-right:auto;
     }
   </style>
   
@@ -110,8 +119,10 @@
     <li><img src='http://el70.com/img/mejicanLost.png'></li>
   </ul>
 </div>
-<h2> Demo of Multiple Items with links </h2>
-<div class='demoContent'>
+
+<br/><br/>
+<h2> Demo with Multiple Items and links </h2>
+<div class='demo2Content'>
  <ul id="demo2">
   <li>
     <a href='http://visualma.com' target='_blank'>
