--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       $('#demo2').swipeThis({
         multiple:true,
         marginRight:15,
-        indicator:'https://raw.github.com/pfortes/swipeThis/master/img/flecha48x48.png'});
+        indicator:'https://raw.github.com/pfortes/swipeThis/master/img/flecha48x48.png'
     });
 
     
