Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       
       $('#demo2').swipeThis({
         multiple:true,
+        itemWidth:200,
         marginRight:5,
         indicator:'https://raw.github.com/pfortes/swipeThis/master/img/flecha48x48.png'
       });
@@ -148,7 +149,7 @@
 
 </ul>
 </div>
-
+<br/><br/>
 <hr/>
 
 <h2> Using swipeThis</h2>
