Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       swipeThis is a jQuery / jQuery mobile plugin for easily creating swipeable lists of items.<br/><br/>
       
       It is prepared to work on mobile devices and desktop browsers, you can have one or multiple items visible, 
-      items can be clickable / tapable, and much more..<br/>
+      items can be tapable, and much more..<br/>
     </div>
 
 <h4>Dependencies</h4>
@@ -125,7 +125,7 @@
 </div>
 
 <br/><br/>
-<h2> Demo with Multiple Items and links </h2>
+<h2> Demo with Multiple Items </h2>
 <div class='demo2Content'>
  <ul id="demo2">
    <li>
